tests/should_pass/import_resource_chain.fit
import import_resource_chain_dep1

fn run() -> () {
    let w = make_widget()
    use_widget(w)
}
