tests/should_fail/import_duplicate_name.fit
import import_duplicate_name_dep1
import import_duplicate_name_dep2

fn run() -> ()
